...
    android:background="@color/colorSemiTransparent"
    android:clickable="true"
    android:padding="18dp"
    tools:context=".views.MovieDetailActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
